--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,53 @@
-<p>footer works!</p>
+<footer class="bg-dark p-3 mt-5">
+    <div class="container">
+        <div class="row align-items-center">
+            <!-- Widget -->
+            <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                <!-- Logo START -->
+                <a href="#"> <img class="h-20px" src="" alt="logo"> </a>
+                <p class="text-white">If you want a guide on your journey as a developer, you are in the right place</p>
+            </div>
+            
+            <!-- Links and Social Media Links -->
+            <div class="col-md-8 text-center mb-3 mb-md-0">
+                <div class="row">
+                    <!-- Links -->
+                    <div class="col-12 col-md-9 mb-2 mb-md-0 d-flex flex-wrap justify-content-center align-items-center">
+                        <a href="#" class="text-white text-decoration-none mx-2 my-1">About Us</a>
+                        <span class="text-white mx-2 my-1">|</span>
+                        <a href="#" class="text-white text-decoration-none mx-2 my-1">Contact Us</a>
+                        <span class="text-white mx-2 my-1">|</span>
+                        <a href="#" class="text-white text-decoration-none mx-2 my-1">Sign Up</a>
+                        <span class="text-white mx-2 my-1">|</span>
+                        <a href="#" class="text-white text-decoration-none mx-2 my-1">Developer</a>
+                        <span class="text-white mx-2 my-1">|</span>
+                        <a href="#" class="text-white text-decoration-none mx-2 my-1">Mentor</a>
+                        <span class="text-white mx-2 my-1">|</span>
+                        <a href="#" class="text-white text-decoration-none mx-2 my-1">HR</a>
+                        <span class="text-white mx-2 my-1">|</span>
+                        <a href="#" class="text-white text-decoration-none mx-2 my-1">Help</a>
+                    </div>
+
+                    <!-- Social Media Links -->
+                    <div class="col-12 col-md-3 d-flex flex-column align-items-center mt-2 mt-md-0">
+                        <p class="text-white mb-2">Follow on</p>
+                        <ul class="list-inline mb-0 d-flex justify-content-center">
+                            <li class="list-inline-item ms-2"><a href="#"><i class="text-white fab fa-facebook-f"></i></a></li>
+                            <li class="list-inline-item ms-2"><a href="#"><i class="text-white fab fa-instagram"></i></a></li>
+                            <li class="list-inline-item ms-2"><a href="#"><i class="text-white fab fa-linkedin-in"></i></a></li>
+                            <li class="list-inline-item ms-2"><a href="#"><i class="text-white fab fa-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr class="text-white">
+        <div class="row">
+            <div class="col-12">
+                <div class="text-center text-white text-primary-hover">
+                    Copyrights ©2024 Eduport. Built by <a href="https://www.webestica.com/" target="_blank" class="text-white text-decoration-none">Webestica</a>.
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
