--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -28,8 +28,11 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item text-muted"><i class="bi bi-person fa-fw me-2"></i>Edit Profile</a></li>
-          <li><a class="dropdown-item bg-danger-soft-hover text-muted"><i class="bi bi-power fa-fw me-2"></i>Sign
+          <li><a class="dropdown-item text-muted" href="developer/updateprofile"><i
+                class="bi bi-person fa-fw me-2"></i>Edit Profile</a></li>
+
+          <li><a class="dropdown-item bg-danger-soft-hover text-muted" href="developer/register"><i
+                class="bi bi-power fa-fw me-2"></i>Sign
               Out</a></li>
         </ul>
       </div>
@@ -37,19 +40,19 @@
     <div class="collapse navbar-collapse order-lg-1" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page">Developer</a>
+          <a class="nav-link active" aria-current="page" href="#">Developer</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Mentor</a>
+          <a class="nav-link" href="developer/mentors">Mentor</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">HR</a>
+          <a class="nav-link" href="developer/hr-s">HR</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="/aboutus">aboutus</a>
+          <a class="nav-link " href="developer/aboutus">aboutus</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerlink="/forgetpassword">Contact us</a>
+          <a class="nav-link" href="developer/contactus">Contact us</a>
         </li>
       </ul>
     </div>
