--- a/src/app/shared/components/forget_password/forget_password.component.html
+++ b/src/app/shared/components/forget_password/forget_password.component.html
@@ -1,6 +1,6 @@
 <div class="forgot-password">
   <h2>Forgot Password</h2>
-  <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="forgotPasswordForm">
     <div>
       <label for="email">Email:</label>
       <input id="email" formControlName="email" type="email" aria-describedby="emailHelp" />
