--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -28,10 +28,10 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item text-muted" href="developer/updateprofile"><i
+          <li><a class="dropdown-item text-muted" routerLink="/developer/updateprofile"><i
                 class="bi bi-person fa-fw me-2"></i>Edit Profile</a></li>
 
-          <li><a class="dropdown-item bg-danger-soft-hover text-muted" href="developer/register"><i
+          <li><a class="dropdown-item bg-danger-soft-hover text-muted" routerLink="/developer/register"><i
                 class="bi bi-power fa-fw me-2"></i>Sign
               Out</a></li>
         </ul>
@@ -40,19 +40,19 @@
     <div class="collapse navbar-collapse order-lg-1" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Developer</a>
+          <a class="nav-link active" aria-current="page" routerLink="/developer/userlayout">Developer</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="developer/mentors">Mentor</a>
+          <a class="nav-link" routerLink="/developer/mentors">Mentor</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="developer/hr-s">HR</a>
+          <a class="nav-link" routerLink="/developer/hr-s">HR</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="developer/aboutus">aboutus</a>
+          <a class="nav-link " routerLink="/developer/aboutus">aboutus</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="developer/contactus">Contact us</a>
+          <a class="nav-link" routerLink="/developer/contactus">Contact us</a>
         </li>
       </ul>
     </div>
