--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -1,124 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Signup</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .signup-form {
-      max-width: 400px;
-      margin: 50px auto;
-      padding: 15px;
-      background-color: #cdcbb1;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(60, 6, 6, 0.1);
-    }
-
-    .signup-form h2 {
-      margin-bottom: 20px;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container">
-    <div class="signup-form">
-      <h2 class="text-center">Sign up</h2>
-      <form [formGroup]="form">
-        <div class="form-group">
-          <label for="email">Email address</label>
-          <input formControlName="email" type="email" class="form-control" [ngClass]="{
+<div class="container">
+  <div class="signup-form">
+    <h2 class="text-center">Sign up</h2>
+    <form [formGroup]="form">
+      <div class="form-group">
+        <label for="email">Email address</label>
+        <input formControlName="email" type="email" class="form-control" [ngClass]="{
             'is-valid': form.controls['email'].valid,
             'is-invalid': form.controls['email'].invalid && form.controls['email'].dirty
             }">
-          <div class="valid-feedback">
-            Looks good!
-          </div>
-          <div class="invalid-feedback">
-            <!-- Please Email Like : Admin&commat;gmail.com . -->
-            @if(form.controls['email'].hasError("required")){
-            <span>Please Provide Valid Email</span>
-            }
-            @else if(form.controls['email'].hasError("email")) {
-            <span>Email must have letter &commat;</span>
-            }
-          </div>
+        <div class="valid-feedback">
+          Looks good!
         </div>
-        <div class="form-group">
-          <label for="personname">Full Name</label>
-          <input formControlName="personname" type="text" class="form-control" [ngClass]="{
+        <div class="invalid-feedback">
+          <!-- Please Email Like : Admin&commat;gmail.com . -->
+          @if(form.controls['email'].hasError("required")){
+          <span>Please Provide Valid Email</span>
+          }
+          @else if(form.controls['email'].hasError("email")) {
+          <span>Email must have letter &commat;</span>
+          }
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="personname">Full Name</label>
+        <input formControlName="personname" type="text" class="form-control" [ngClass]="{
             'is-valid': form.controls['personname'].valid,
             'is-invalid': form.controls['personname'].invalid && form.controls['personname'].dirty
           }">
-          <div class="valid-feedback">
-            Looks good!
-          </div>
-          <div class="invalid-feedback">
-            <!-- Please Email Like : Admin&commat;gmail.com . -->
-            @if(form.controls['personname'].hasError("required")){
-            <span>Please Provide Valid Name</span>
-            }
-            @else if(form.controls['personname'].hasError("minLength")){
-            <span> Name must have 20 Letter atleast.</span>
-            }
-          </div>
+        <div class="valid-feedback">
+          Looks good!
         </div>
-        <div class="form-group">
-          <label for="username">UserName</label>
-          <input formControlName="username" type="text" class="form-control" [ngClass]="{
+        <div class="invalid-feedback">
+          <!-- Please Email Like : Admin&commat;gmail.com . -->
+          @if(form.controls['personname'].hasError("required")){
+          <span>Please Provide Valid Name</span>
+          }
+          @else if(form.controls['personname'].hasError("minLength")){
+          <span> Name must have 20 Letter atleast.</span>
+          }
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="username">UserName</label>
+        <input formControlName="username" type="text" class="form-control" [ngClass]="{
             'is-valid': form.controls['username'].valid,
             'is-invalid': form.controls['username'].invalid && form.controls['username'].dirty
           }">
-          <div class="valid-feedback">
-            Looks good!
-          </div>
-          <div class="invalid-feedback">
-            @if(form.controls['username'].hasError("required")){
-            <span>Please Provide Valid UserName</span>
-            }
-            @else{
-            <span>Please Provide Valid User Name at least 8 characters Without Spaces</span>
-            }
-
-          </div>
+        <div class="valid-feedback">
+          Looks good!
         </div>
-        <div class="form-group">
-          <label for="phonenumber">Phone Number</label>
-          <input formControlName="phonenumber" type="text" class="form-control" [ngClass]="{
+        <div class="invalid-feedback">
+          @if(form.controls['username'].hasError("required")){
+          <span>Please Provide Valid UserName</span>
+          }
+          @else{
+          <span>Please Provide Valid User Name at least 8 characters Without Spaces</span>
+          }
+
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="phonenumber">Phone Number</label>
+        <input formControlName="phonenumber" type="text" class="form-control" [ngClass]="{
             'is-valid': form.controls['phonenumber'].valid,
             'is-invalid': form.controls['phonenumber'].invalid && form.controls['phonenumber'].dirty
           }">
-          <div class="valid-feedback">
-            Looks good!
-          </div>
-          <div class="invalid-feedback">
-            <span>Please Provide Valid Phone Number contains 11 number</span>
-          </div>
+        <div class="valid-feedback">
+          Looks good!
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input formControlName="password" type="password" class="form-control" [ngClass]="{
+        <div class="invalid-feedback">
+          <span>Please Provide Valid Phone Number contains 11 number</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input formControlName="password" type="password" class="form-control" [ngClass]="{
             'is-valid': form.controls['password'].valid,
             'is-invalid': form.controls['password'].invalid && form.controls['password'].dirty
             }">
-          <div class="valid-feedback">
-            Looks good!
-          </div>
-          <div class="invalid-feedback">
-            Please Password contains 8 letters atlest and has Lower case and upper case and number and spical caracter.
-          </div>
+        <div class="valid-feedback">
+          Looks good!
         </div>
-        <button type="submit" [disabled]="form.invalid" class="btn btn-primary btn-block">Signup</button>
-        <p class="text-center mt-3">
-          Already have an account?
-          <a href="developer/login"> login</a>
-        </p>
-      </form>
-    </div>
+        <div class="invalid-feedback">
+          Please Password contains 8 letters atlest and has Lower case and upper case and number and spical caracter.
+        </div>
+      </div>
+      <button type="submit" [disabled]="form.invalid" class="btn btn-primary btn-block">Signup</button>
+      <p class="text-center mt-3">
+        Already have an account?
+        <a routerLink="/developer/login">login</a>
+      </p>
+    </form>
   </div>
-
-</body>
-
-</html>
+</div>
