Updating nav and footer

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -45,7 +45,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center text-white text-primary-hover">
-                    Copyrights ©2024 Eduport. Built by <a href="https://www.webestica.com/" target="_blank" class="text-white text-decoration-none">Webestica</a>.
+                    Copyrights ©2024 Eduport. Built by Dev-Guide Team.
                 </div>
             </div>
         </div>
