--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -13,17 +13,17 @@
                 <div class="row">
                     <!-- Links -->
                     <div class="col-12 col-md-9 mb-2 mb-md-0 d-flex flex-wrap justify-content-center align-items-center">
-                        <a href="#" class="text-white text-decoration-none mx-2 my-1">About Us</a>
+                        <a routerLink="/developer/aboutus" class="text-white text-decoration-none mx-2 my-1">About Us</a>
                         <span class="text-white mx-2 my-1">|</span>
-                        <a href="#" class="text-white text-decoration-none mx-2 my-1">Contact Us</a>
+                        <a routerLink="/developer/contactus" class="text-white text-decoration-none mx-2 my-1">Contact Us</a>
                         <span class="text-white mx-2 my-1">|</span>
-                        <a href="#" class="text-white text-decoration-none mx-2 my-1">Sign Up</a>
+                        <a routerLink="/developer/register" class="text-white text-decoration-none mx-2 my-1">Sign Up</a>
                         <span class="text-white mx-2 my-1">|</span>
-                        <a href="#" class="text-white text-decoration-none mx-2 my-1">Developer</a>
+                        <a  routerLink="/developer/userlayout" class="text-white text-decoration-none mx-2 my-1">Developer</a>
                         <span class="text-white mx-2 my-1">|</span>
-                        <a href="#" class="text-white text-decoration-none mx-2 my-1">Mentor</a>
+                        <a routerLink="/developer/mentors" class="text-white text-decoration-none mx-2 my-1">Mentor</a>
                         <span class="text-white mx-2 my-1">|</span>
-                        <a href="#" class="text-white text-decoration-none mx-2 my-1">HR</a>
+                        <a routerLink="/developer/hr-s" class="text-white text-decoration-none mx-2 my-1">HR</a>
                         <span class="text-white mx-2 my-1">|</span>
                         <a href="#" class="text-white text-decoration-none mx-2 my-1">Help</a>
                     </div>
