--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -27,14 +27,14 @@
               <hr class="dropdown-divider">
             </li>
             <li><a class="dropdown-item text-muted" routerLink="/developer/updateprofile"><i class="bi bi-person fa-fw me-2"></i>Edit Profile</a></li>
-            <li><a class="dropdown-item bg-danger-soft-hover text-muted" routerLink="/developer/register"><i class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
+            <li><a class="dropdown-item bg-danger-soft-hover text-muted" routerLink="/register"><i class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
           </ul>
         </div>
       } @else {
         <div class="collapse navbar-collapse order-lg-1 " >
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" routerLink="/developer/login">Login /</a></li>
-            <li class="nav-item"><a class="nav-link" routerLink="/developer/register">Register</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/login">Login /</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/register">Register</a></li>
           </ul>
         </div>
       }
